# Chess-Engine

./: .gitignore  Agents.md  CLAUDE.md  Improvement-Plan.md  README.md  README_NNUE.md  SomewhereIsABug.md  Syzygy-task.md  Tasks.md  agents.md  cp.txt  match-log.csv  next-steps.md  pom.xml  profile-engine.bat
docs/: public-api-stability.md  refactor-map.md
logs/test-runs/20251017_172542/baseline/: BestMoveSearchTest.txt  BestMoveSearchTest.xml  baseline-summary.md  bestmove-depth8.jfr
logs/test-runs/20251017_191251/best-move-search-multithread/: 2025-10-17T19-12-26_280-jvmRun1.dumpstream  TEST-julius.game.chessengine.ai.BestMoveSearchTest.xml  julius.game.chessengine.ai.BestMoveSearchTest.txt
logs/test-runs/20251017_192249/lock-profiling/: bestmove-locks-monitor.jfr  bestmove-locks-monitor0.jfr  (+2 more)
logs/test-runs/java25-profile/: profiling-baseline-2025-10-16T16-21-20.598225805Z.txt
scripts/: __init__.py  auto-tuning-powershell-recipes.md  auto_tuning_loop.py  cutechess_tuning_loop.py  profile-engine.ps1
scripts/nn-training/: evolve.py  evolve_nnue.py  feature_extractor.py  generate_data_v3.py  generate_nnue_data.py  nnue_features.py  train.py  train_nnue.py
scripts/tests/: conftest.py  test_adapt_opponent_elo.py  test_cutechess_parsing.py  test_cutechess_tuning_loop_parsing.py  test_param_specs_hex.py
src/main/native/: CMakeLists.txt  jni_bridge.c  julius_game_chessengine_syzygy_bridge_SyzygyBridge.h  tbcore.c  tbprobe.c
src/main/resources/: StatisticsBattle.txt  StatisticsPERFT.txt  application.yaml  banner.txt
src/test/python/: test_calc_move_time.py
(+449 files in other folders)
